// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[InfoHeaderComponent] should render with currentPage bigger than totalItems without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pagination
    currentPage={5}
    totalItems={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="pagination"
      >
        <Link title="" 
          className="pagination-prev"
          onClick={[Function]}
          replace={false}
          to="#"
        >
          <IconComponent
            icon="chevron-right.svg"
            size="10px"
          />
        </Link>
        <ul
          className="pagination-list"
        >
          <li>
            <Link title="" 
              className="pagination-item"
              onClick={[Function]}
              replace={false}
              to="#"
            >
              1
            </Link>
          </li>
          <li>
            <Link title="" 
              className="pagination-item"
              onClick={[Function]}
              replace={false}
              to="#"
            >
              2
            </Link>
          </li>
        </ul>
        <Link title="" 
          className="pagination-next"
          onClick={[Function]}
          replace={false}
          to="#"
        >
          <IconComponent
            icon="chevron-right.svg"
            size="10px"
          />
        </Link>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link title="" 
            className="pagination-prev"
            onClick={[Function]}
            replace={false}
            to="#"
          >
            <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />
          </Link>,
          <ul
            className="pagination-list"
          >
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                1
              </Link>
            </li>
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                2
              </Link>
            </li>
          </ul>,
          <Link title="" 
            className="pagination-next"
            onClick={[Function]}
            replace={false}
            to="#"
          >
            <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />
          </Link>,
        ],
        "className": "pagination",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />,
            "className": "pagination-prev",
            "onClick": [Function],
            "replace": false,
            "to": "#",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "icon": "chevron-right.svg",
              "size": "10px",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  1
                </Link>
              </li>,
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  2
                </Link>
              </li>,
            ],
            "className": "pagination-list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "host",
              "props": Object {
                "children": <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  1
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": 1,
                  "className": "pagination-item",
                  "onClick": [Function],
                  "replace": false,
                  "to": "#",
                },
                "ref": null,
                "rendered": 1,
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  2
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": 2,
                  "className": "pagination-item",
                  "onClick": [Function],
                  "replace": false,
                  "to": "#",
                },
                "ref": null,
                "rendered": 2,
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />,
            "className": "pagination-next",
            "onClick": [Function],
            "replace": false,
            "to": "#",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "icon": "chevron-right.svg",
              "size": "10px",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="pagination"
        >
          <Link title="" 
            className="pagination-prev"
            onClick={[Function]}
            replace={false}
            to="#"
          >
            <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />
          </Link>
          <ul
            className="pagination-list"
          >
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                1
              </Link>
            </li>
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                2
              </Link>
            </li>
          </ul>
          <Link title="" 
            className="pagination-next"
            onClick={[Function]}
            replace={false}
            to="#"
          >
            <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />
          </Link>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Link title="" 
              className="pagination-prev"
              onClick={[Function]}
              replace={false}
              to="#"
            >
              <IconComponent
                icon="chevron-right.svg"
                size="10px"
              />
            </Link>,
            <ul
              className="pagination-list"
            >
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  1
                </Link>
              </li>
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  2
                </Link>
              </li>
            </ul>,
            <Link title="" 
              className="pagination-next"
              onClick={[Function]}
              replace={false}
              to="#"
            >
              <IconComponent
                icon="chevron-right.svg"
                size="10px"
              />
            </Link>,
          ],
          "className": "pagination",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <IconComponent
                icon="chevron-right.svg"
                size="10px"
              />,
              "className": "pagination-prev",
              "onClick": [Function],
              "replace": false,
              "to": "#",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "icon": "chevron-right.svg",
                "size": "10px",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li>
                  <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    1
                  </Link>
                </li>,
                <li>
                  <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    2
                  </Link>
                </li>,
              ],
              "className": "pagination-list",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "host",
                "props": Object {
                  "children": <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    1
                  </Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": 1,
                    "className": "pagination-item",
                    "onClick": [Function],
                    "replace": false,
                    "to": "#",
                  },
                  "ref": null,
                  "rendered": 1,
                  "type": [Function],
                },
                "type": "li",
              },
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "host",
                "props": Object {
                  "children": <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    2
                  </Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": 2,
                    "className": "pagination-item",
                    "onClick": [Function],
                    "replace": false,
                    "to": "#",
                  },
                  "ref": null,
                  "rendered": 2,
                  "type": [Function],
                },
                "type": "li",
              },
            ],
            "type": "ul",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <IconComponent
                icon="chevron-right.svg"
                size="10px"
              />,
              "className": "pagination-next",
              "onClick": [Function],
              "replace": false,
              "to": "#",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "icon": "chevron-right.svg",
                "size": "10px",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`[InfoHeaderComponent] should render with no pages without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pagination
    currentPage={0}
    totalItems={1}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="pagination"
      >
        <Link title="" 
          className="pagination-prev"
          onClick={[Function]}
          replace={false}
          to="#"
        >
          <IconComponent
            icon="chevron-right.svg"
            size="10px"
          />
        </Link>
        <ul
          className="pagination-list"
        >
          <li>
            <Link title="" 
              className="pagination-item"
              onClick={[Function]}
              replace={false}
              to="#"
            >
              1
            </Link>
          </li>
          <li>
            <Link title="" 
              className="pagination-item"
              onClick={[Function]}
              replace={false}
              to="#"
            >
              2
            </Link>
          </li>
        </ul>
        <Link title="" 
          className="pagination-next"
          onClick={[Function]}
          replace={false}
          to="#"
        >
          <IconComponent
            icon="chevron-right.svg"
            size="10px"
          />
        </Link>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link title="" 
            className="pagination-prev"
            onClick={[Function]}
            replace={false}
            to="#"
          >
            <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />
          </Link>,
          <ul
            className="pagination-list"
          >
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                1
              </Link>
            </li>
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                2
              </Link>
            </li>
          </ul>,
          <Link title="" 
            className="pagination-next"
            onClick={[Function]}
            replace={false}
            to="#"
          >
            <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />
          </Link>,
        ],
        "className": "pagination",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />,
            "className": "pagination-prev",
            "onClick": [Function],
            "replace": false,
            "to": "#",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "icon": "chevron-right.svg",
              "size": "10px",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  1
                </Link>
              </li>,
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  2
                </Link>
              </li>,
            ],
            "className": "pagination-list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "host",
              "props": Object {
                "children": <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  1
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": 1,
                  "className": "pagination-item",
                  "onClick": [Function],
                  "replace": false,
                  "to": "#",
                },
                "ref": null,
                "rendered": 1,
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  2
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": 2,
                  "className": "pagination-item",
                  "onClick": [Function],
                  "replace": false,
                  "to": "#",
                },
                "ref": null,
                "rendered": 2,
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />,
            "className": "pagination-next",
            "onClick": [Function],
            "replace": false,
            "to": "#",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "icon": "chevron-right.svg",
              "size": "10px",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="pagination"
        >
          <Link title="" 
            className="pagination-prev"
            onClick={[Function]}
            replace={false}
            to="#"
          >
            <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />
          </Link>
          <ul
            className="pagination-list"
          >
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                1
              </Link>
            </li>
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                2
              </Link>
            </li>
          </ul>
          <Link title="" 
            className="pagination-next"
            onClick={[Function]}
            replace={false}
            to="#"
          >
            <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />
          </Link>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Link title="" 
              className="pagination-prev"
              onClick={[Function]}
              replace={false}
              to="#"
            >
              <IconComponent
                icon="chevron-right.svg"
                size="10px"
              />
            </Link>,
            <ul
              className="pagination-list"
            >
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  1
                </Link>
              </li>
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  2
                </Link>
              </li>
            </ul>,
            <Link title="" 
              className="pagination-next"
              onClick={[Function]}
              replace={false}
              to="#"
            >
              <IconComponent
                icon="chevron-right.svg"
                size="10px"
              />
            </Link>,
          ],
          "className": "pagination",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <IconComponent
                icon="chevron-right.svg"
                size="10px"
              />,
              "className": "pagination-prev",
              "onClick": [Function],
              "replace": false,
              "to": "#",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "icon": "chevron-right.svg",
                "size": "10px",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li>
                  <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    1
                  </Link>
                </li>,
                <li>
                  <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    2
                  </Link>
                </li>,
              ],
              "className": "pagination-list",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "host",
                "props": Object {
                  "children": <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    1
                  </Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": 1,
                    "className": "pagination-item",
                    "onClick": [Function],
                    "replace": false,
                    "to": "#",
                  },
                  "ref": null,
                  "rendered": 1,
                  "type": [Function],
                },
                "type": "li",
              },
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "host",
                "props": Object {
                  "children": <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    2
                  </Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": 2,
                    "className": "pagination-item",
                    "onClick": [Function],
                    "replace": false,
                    "to": "#",
                  },
                  "ref": null,
                  "rendered": 2,
                  "type": [Function],
                },
                "type": "li",
              },
            ],
            "type": "ul",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <IconComponent
                icon="chevron-right.svg"
                size="10px"
              />,
              "className": "pagination-next",
              "onClick": [Function],
              "replace": false,
              "to": "#",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "icon": "chevron-right.svg",
                "size": "10px",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`[InfoHeaderComponent] should render without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pagination
    currentPage={1}
    totalItems={23}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="pagination"
      >
        <Link title="" 
          className="pagination-prev"
          onClick={[Function]}
          replace={false}
          to="#"
        >
          <IconComponent
            icon="chevron-right.svg"
            size="10px"
          />
        </Link>
        <ul
          className="pagination-list"
        >
          <li>
            <Link title="" 
              className="pagination-item pagination-item--current"
              onClick={[Function]}
              replace={false}
              to="#"
            >
              1
            </Link>
          </li>
          <li>
            <Link title="" 
              className="pagination-item"
              onClick={[Function]}
              replace={false}
              to="#"
            >
              2
            </Link>
          </li>
          <li>
            <Link title="" 
              className="pagination-item"
              onClick={[Function]}
              replace={false}
              to="#"
            >
              3
            </Link>
          </li>
          <li>
            <Link title="" 
              className="pagination-item"
              onClick={[Function]}
              replace={false}
              to="#"
            >
              4
            </Link>
          </li>
          <li>
            <Link title="" 
              className="pagination-item"
              onClick={[Function]}
              replace={false}
              to="#"
            >
              5
            </Link>
          </li>
          . . .
          <li>
            <Link title="" 
              className="pagination-item"
              onClick={[Function]}
              replace={false}
              to="#"
            >
              24
            </Link>
          </li>
        </ul>
        <Link title="" 
          className="pagination-next"
          onClick={[Function]}
          replace={false}
          to="#"
        >
          <IconComponent
            icon="chevron-right.svg"
            size="10px"
          />
        </Link>
      </div>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link title="" 
            className="pagination-prev"
            onClick={[Function]}
            replace={false}
            to="#"
          >
            <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />
          </Link>,
          <ul
            className="pagination-list"
          >
            <li>
              <Link title="" 
                className="pagination-item pagination-item--current"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                1
              </Link>
            </li>
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                2
              </Link>
            </li>
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                3
              </Link>
            </li>
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                4
              </Link>
            </li>
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                5
              </Link>
            </li>
            . . .
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                24
              </Link>
            </li>
          </ul>,
          <Link title="" 
            className="pagination-next"
            onClick={[Function]}
            replace={false}
            to="#"
          >
            <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />
          </Link>,
        ],
        "className": "pagination",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />,
            "className": "pagination-prev",
            "onClick": [Function],
            "replace": false,
            "to": "#",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "icon": "chevron-right.svg",
              "size": "10px",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <Link title="" 
                  className="pagination-item pagination-item--current"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  1
                </Link>
              </li>,
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  2
                </Link>
              </li>,
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  3
                </Link>
              </li>,
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  4
                </Link>
              </li>,
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  5
                </Link>
              </li>,
              ". . .",
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  24
                </Link>
              </li>,
            ],
            "className": "pagination-list",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "0",
              "nodeType": "host",
              "props": Object {
                "children": <Link title="" 
                  className="pagination-item pagination-item--current"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  1
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": 1,
                  "className": "pagination-item pagination-item--current",
                  "onClick": [Function],
                  "replace": false,
                  "to": "#",
                },
                "ref": null,
                "rendered": 1,
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "host",
              "props": Object {
                "children": <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  2
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": 2,
                  "className": "pagination-item",
                  "onClick": [Function],
                  "replace": false,
                  "to": "#",
                },
                "ref": null,
                "rendered": 2,
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "host",
              "props": Object {
                "children": <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  3
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": 3,
                  "className": "pagination-item",
                  "onClick": [Function],
                  "replace": false,
                  "to": "#",
                },
                "ref": null,
                "rendered": 3,
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "host",
              "props": Object {
                "children": <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  4
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": 4,
                  "className": "pagination-item",
                  "onClick": [Function],
                  "replace": false,
                  "to": "#",
                },
                "ref": null,
                "rendered": 4,
                "type": [Function],
              },
              "type": "li",
            },
            Object {
              "instance": null,
              "key": "4",
              "nodeType": "host",
              "props": Object {
                "children": <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  5
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": 5,
                  "className": "pagination-item",
                  "onClick": [Function],
                  "replace": false,
                  "to": "#",
                },
                "ref": null,
                "rendered": 5,
                "type": [Function],
              },
              "type": "li",
            },
            ". . .",
            Object {
              "instance": null,
              "key": "5",
              "nodeType": "host",
              "props": Object {
                "children": <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  24
                </Link>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": 24,
                  "className": "pagination-item",
                  "onClick": [Function],
                  "replace": false,
                  "to": "#",
                },
                "ref": null,
                "rendered": 24,
                "type": [Function],
              },
              "type": "li",
            },
          ],
          "type": "ul",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />,
            "className": "pagination-next",
            "onClick": [Function],
            "replace": false,
            "to": "#",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "icon": "chevron-right.svg",
              "size": "10px",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="pagination"
        >
          <Link title="" 
            className="pagination-prev"
            onClick={[Function]}
            replace={false}
            to="#"
          >
            <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />
          </Link>
          <ul
            className="pagination-list"
          >
            <li>
              <Link title="" 
                className="pagination-item pagination-item--current"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                1
              </Link>
            </li>
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                2
              </Link>
            </li>
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                3
              </Link>
            </li>
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                4
              </Link>
            </li>
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                5
              </Link>
            </li>
            . . .
            <li>
              <Link title="" 
                className="pagination-item"
                onClick={[Function]}
                replace={false}
                to="#"
              >
                24
              </Link>
            </li>
          </ul>
          <Link title="" 
            className="pagination-next"
            onClick={[Function]}
            replace={false}
            to="#"
          >
            <IconComponent
              icon="chevron-right.svg"
              size="10px"
            />
          </Link>
        </div>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Link title="" 
              className="pagination-prev"
              onClick={[Function]}
              replace={false}
              to="#"
            >
              <IconComponent
                icon="chevron-right.svg"
                size="10px"
              />
            </Link>,
            <ul
              className="pagination-list"
            >
              <li>
                <Link title="" 
                  className="pagination-item pagination-item--current"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  1
                </Link>
              </li>
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  2
                </Link>
              </li>
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  3
                </Link>
              </li>
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  4
                </Link>
              </li>
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  5
                </Link>
              </li>
              . . .
              <li>
                <Link title="" 
                  className="pagination-item"
                  onClick={[Function]}
                  replace={false}
                  to="#"
                >
                  24
                </Link>
              </li>
            </ul>,
            <Link title="" 
              className="pagination-next"
              onClick={[Function]}
              replace={false}
              to="#"
            >
              <IconComponent
                icon="chevron-right.svg"
                size="10px"
              />
            </Link>,
          ],
          "className": "pagination",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <IconComponent
                icon="chevron-right.svg"
                size="10px"
              />,
              "className": "pagination-prev",
              "onClick": [Function],
              "replace": false,
              "to": "#",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "icon": "chevron-right.svg",
                "size": "10px",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li>
                  <Link title="" 
                    className="pagination-item pagination-item--current"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    1
                  </Link>
                </li>,
                <li>
                  <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    2
                  </Link>
                </li>,
                <li>
                  <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    3
                  </Link>
                </li>,
                <li>
                  <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    4
                  </Link>
                </li>,
                <li>
                  <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    5
                  </Link>
                </li>,
                ". . .",
                <li>
                  <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    24
                  </Link>
                </li>,
              ],
              "className": "pagination-list",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "0",
                "nodeType": "host",
                "props": Object {
                  "children": <Link title="" 
                    className="pagination-item pagination-item--current"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    1
                  </Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": 1,
                    "className": "pagination-item pagination-item--current",
                    "onClick": [Function],
                    "replace": false,
                    "to": "#",
                  },
                  "ref": null,
                  "rendered": 1,
                  "type": [Function],
                },
                "type": "li",
              },
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "host",
                "props": Object {
                  "children": <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    2
                  </Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": 2,
                    "className": "pagination-item",
                    "onClick": [Function],
                    "replace": false,
                    "to": "#",
                  },
                  "ref": null,
                  "rendered": 2,
                  "type": [Function],
                },
                "type": "li",
              },
              Object {
                "instance": null,
                "key": "2",
                "nodeType": "host",
                "props": Object {
                  "children": <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    3
                  </Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": 3,
                    "className": "pagination-item",
                    "onClick": [Function],
                    "replace": false,
                    "to": "#",
                  },
                  "ref": null,
                  "rendered": 3,
                  "type": [Function],
                },
                "type": "li",
              },
              Object {
                "instance": null,
                "key": "3",
                "nodeType": "host",
                "props": Object {
                  "children": <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    4
                  </Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": 4,
                    "className": "pagination-item",
                    "onClick": [Function],
                    "replace": false,
                    "to": "#",
                  },
                  "ref": null,
                  "rendered": 4,
                  "type": [Function],
                },
                "type": "li",
              },
              Object {
                "instance": null,
                "key": "4",
                "nodeType": "host",
                "props": Object {
                  "children": <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    5
                  </Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": 5,
                    "className": "pagination-item",
                    "onClick": [Function],
                    "replace": false,
                    "to": "#",
                  },
                  "ref": null,
                  "rendered": 5,
                  "type": [Function],
                },
                "type": "li",
              },
              ". . .",
              Object {
                "instance": null,
                "key": "5",
                "nodeType": "host",
                "props": Object {
                  "children": <Link title="" 
                    className="pagination-item"
                    onClick={[Function]}
                    replace={false}
                    to="#"
                  >
                    24
                  </Link>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": 24,
                    "className": "pagination-item",
                    "onClick": [Function],
                    "replace": false,
                    "to": "#",
                  },
                  "ref": null,
                  "rendered": 24,
                  "type": [Function],
                },
                "type": "li",
              },
            ],
            "type": "ul",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <IconComponent
                icon="chevron-right.svg"
                size="10px"
              />,
              "className": "pagination-next",
              "onClick": [Function],
              "replace": false,
              "to": "#",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "icon": "chevron-right.svg",
                "size": "10px",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
